2009-09-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/box_reports.[h|cc]:
	* glom/navigation/box_tables.[h|cc]: Comment out some save_to_document() 
	methods in client-only mode.

2009-09-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/frame_glom.cc: Fix tiny typos to fix the non-maemo build.

2009-09-05  Murray Cumming  <murrayc@murrayc.com>

	Maemo: ifdef out useless menu code.

	* glom/application.[h|c]]: Ifdef out any menu-building code because 
	it must be completely replaced by Hildon::AppMenu code on Maemo.
	* glom/mode_data/notebook_data.cc: Constructor: Hide the notebook 
	tabs, in preparation for just showing the list, with the details in a 
	separate window on Maemo.

2009-09-05  Murray Cumming  <murrayc@murrayc.com>

	connection_request_password_and_attempt(): Fix a crash in client-only mode.

	* glom/frame_glom.[h|cc]: connection_request_password_and_attempt(): 
	Move some decision-making into handle_request_password_connection_error, 
	to allow us to handle the no-exception API better, though this is 
	clearer anyway, or would be without the ifdefs.

2009-09-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: on_document_load(): Add a ! to really check 
	for unsupported backends.

2009-09-05  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc: check_document_hosting_mode_is_supported():
	Correct and ifdef to an ifndef.

2009-09-05  Murray Cumming  <murrayc@murrayc.com>

	Maemo: Use Hildon::FileChooserDialog for opening files.

	* glom/application.[h|cc]: Remove unused (and unnecessary since the new 
	initial dialog) on_menu_file_open() and on_menu_file_close() overrides 
	and ui_file_select_open_with_browse().
	* glom/dialog_existing_or_new.cc: on_select_clicked(): Use 
	Hildon::FileChooserDialog on Maemo.
	* glom/bakery/app_withdoc_gtk.cc: Remove the uncommented undef of 
	GLOM_ENABLE_MAEMO - no more nasty hacks please. Instead comment-out 